# candle-moe

./: Cargo.toml  README.md  build.rs
kernels/: moe_align_sum_kernels.cu  moe_wna16.cu  topk_softmax_kernels.cu
src/: ffi.rs  lib.rs
tests/: topk_softmax_tests.rs
